# RustWGPUTesting

./: Cargo.toml
app/: Cargo.toml
app/src/: main.rs
renderer/: Cargo.toml
renderer/src/: camera.rs  lib.rs  wgpu_renderer.rs
renderer/src/camera/: projection.rs
renderer/src/wgpu_renderer/: instanced_rendering.rs  model.rs  texture.rs
res/: shader.wgsl
src/: camera.rs  instanced_rendering.rs  main.rs  model.rs  renderer.rs  resources.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/camera/: camera_controller.rs
src/renderer/: wgpu_renderer.rs
src/renderer/wgpu_renderer/: instanced_rendering.rs  model.rs  resources.rs
