[package]
name = "wise"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0" # NEW!
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = [ "async" ]}
stb_image = "0.3.0"
pasts = "0.14.3"

[profile.dev.package.tobj]
opt-level = 3

[profile.dev.package.stb_image]
opt-level = 3
